--- a/Proxy Checker/MainWindow.xaml
+++ b/Proxy Checker/MainWindow.xaml
@@ -3,10 +3,54 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:local="clr-namespace:Proxy_Checker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="350" Width="250" ResizeMode="CanMinimize">
+    <shell:WindowChrome.WindowChrome>
+        <shell:WindowChrome 
+            
+            ResizeBorderThickness="5"
 
-    </Grid>
+            CaptionHeight="20"
+
+            CornerRadius="0,0,0,0"
+            
+            GlassFrameThickness="1">
+        </shell:WindowChrome>
+    </shell:WindowChrome.WindowChrome>
+    
+    <Border BorderThickness="0">
+        <Border.Style>
+            <Style TargetType="{x:Type Border}">
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding WindowState, RelativeSource={RelativeSource AncestorType=Window}}" 
+                                 Value="Maximized">
+                        <Setter Property="Margin" Value="7"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding WindowState, RelativeSource={RelativeSource AncestorType=Window}}" 
+                                 Value="Normal">
+                        <Setter Property="Margin" Value="0"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Border.Style>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="326*"/>
+                <shell:RowDefinition Height="83*"/>
+            </Grid.RowDefinitions>
+            <DockPanel Height="25" Background="#1a508b">
+                <TextBlock Text="PROXY CHECKER" Foreground="White" Margin="5" FontFamily="Arial" FontSize="15" FontWeight="Bold"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                    <Button Content="🗕" VerticalContentAlignment="Top" Width="25" Height="25" Click="MinimizeButton_Click" Background="{x:Null}"  WindowChrome.IsHitTestVisibleInChrome="True" Foreground="White" BorderBrush="{x:Null}" />
+                    <Button Content="✕" Width="25" Height="25" Click="ExitButton_Click" Background="{x:Null}"  WindowChrome.IsHitTestVisibleInChrome="True" Foreground="White" BorderBrush="{x:Null}" />
+                </StackPanel>
+            </DockPanel>
+            <Border Grid.Row="1" BorderThickness="2,0,2,2" BorderBrush="#1a508b" Background="#f8f1f1" shell:Grid.RowSpan="2">
+            </Border>
+        </Grid>
+    </Border>
 </Window>
