--- a/Proxy Checker/MainWindow.xaml
+++ b/Proxy Checker/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:local="clr-namespace:Proxy_Checker"
+        xmlns:local="clr-namespace:Proxy_Checker" xmlns:controls="clr-namespace:NMT.Wpf.Controls;assembly=PulseButton"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="250" ResizeMode="CanMinimize">
     <shell:WindowChrome.WindowChrome>
@@ -19,7 +19,7 @@
             GlassFrameThickness="1">
         </shell:WindowChrome>
     </shell:WindowChrome.WindowChrome>
-    
+
     <Border BorderThickness="0">
         <Border.Style>
             <Style TargetType="{x:Type Border}">
@@ -49,6 +49,18 @@
                 </StackPanel>
             </DockPanel>
             <Border Grid.Row="1" BorderThickness="2,0,2,2" BorderBrush="#03506f" Background="#0a043c" shell:Grid.RowSpan="2">
+                <StackPanel>
+                    <controls:PulseButton Margin="0,40,0,0" Height="50" Width="50" IsEllipsis="True"   
+                      PulseScale="2"
+                      PulseWidth="3"
+                      PulseSpeed="0:0:5"
+                      PulseColor="LightGreen"
+                      Pulses="5"
+                      IsReflective="True"
+                      Focusable="False"  
+                      ButtonBrush="LightGreen"
+                      ButtonHighlightBrush="#a3ddcb"/>
+                </StackPanel>
             </Border>
         </Grid>
     </Border>
