--- a/Proxy Checker/MainWindow.xaml
+++ b/Proxy Checker/MainWindow.xaml
@@ -69,10 +69,10 @@
                       ButtonPressedBrush="#03506f"
                       Click="PulseButton_Click"/>
                     
-                    <Button Margin="0,35,0,0" Width="150" Height="20" Content="Select proxy file location" FontFamily="Arial" BorderBrush="#FFA3DDCB" Foreground="#FFFFE3DE" Background="{x:Null}"/>
+                    <Button Margin="0,35,0,0" Width="150" Height="20" Content="Select proxy file location" Click="Button_Click" FontFamily="Arial" BorderBrush="#FFA3DDCB" Foreground="#FFFFE3DE" Background="{x:Null}"/>
                     <Button Visibility="Collapsed" Margin="0,35,0,0" Width="150" Height="20" Content="Save results" FontFamily="Arial" BorderBrush="#FFA3DDCB" Foreground="#FFFFE3DE" Background="{x:Null}"/>
 
-                    <ItemsControl x:Name="itemsControl" Margin="0,15,0,0" Background="{x:Null}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch" BorderThickness="0" Height="140">
+                    <ItemsControl x:Name="itemsControl" Margin="0,15,0,0" Background="{x:Null}" ItemsSource="{Binding Path=MessageList,ElementName=mainWindow}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch" BorderThickness="0" Height="140">
 
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
