--- a/Proxy Checker/MainWindow.xaml
+++ b/Proxy Checker/MainWindow.xaml
@@ -76,16 +76,8 @@
 
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Border Height="25" BorderThickness="1" BorderBrush="#FFA3DDCB"  CornerRadius="3" Margin="10,0,10,10">
-                                <TextBlock  FontFamily="Arial" FontWeight="Bold" Text="{Binding}" Foreground="#ffe3de" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                    <!--<TextBlock.TextDecorations>
-                                        <TextDecoration Location="Underline">
-                                            <TextDecoration.Pen>
-                                                <Pen Brush="#FFA3DDCB"/>
-                                            </TextDecoration.Pen>
-                                        </TextDecoration>
-                                    </TextBlock.TextDecorations>-->
-                                </TextBlock>
+                                <Border Height="Auto" BorderThickness="1" BorderBrush="#FFA3DDCB"  CornerRadius="3" Margin="10,0,10,10">
+                                    <TextBlock Margin="2" TextWrapping="Wrap"  FontFamily="Arial" FontWeight="Bold" Text="{Binding}" Foreground="#ffe3de" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                 </Border>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
